# servant-memo

./: README.md  servant-memo.cabal
app/: MemoClient.hs  MemoServer.hs
frontend/: Main.elm  Memo.elm  Model.elm  elm-package.json  elm.js  index.html
frontend/elm-stuff/: exact-dependencies.json
frontend/elm-stuff/build-artifacts/0.16.0/user/project/1.0.0/: Main.elmi  Main.elmo  Memo.elmi  Memo.elmo  Model.elmi  Model.elmo  Repl.elmi  Repl.elmo
src/: Api.hs  Model.hs
