name:                servant-memo
version:             0.1.0.0
synopsis:            memo app
description:         Please see README.md
homepage:            http://www.ishiy.xyz
license:             BSD3
license-file:        LICENSE
author:              ishiy
maintainer:          y.ishihara.1993@gmail.com
copyright:           2016 ishiy
category:            Web
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Api
                     , Model
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , servant-server
                     , text
                     , time
                     , wai
                     , wai-extra
                     , warp
  default-language:    Haskell2010

executable memo-server
  hs-source-dirs:      app
  main-is:             MemoServer.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , either
                     , servant-memo
                     , servant-server
                     , time
                     , transformers
                     , persistent
                     , wai
                     , wai-extra
                     , warp

executable memo-client
  hs-source-dirs:      app
  main-is:             MemoClient.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , either
                     , servant-memo
                     , servant-server
                     , servant-client
                     , text
                     , time
